# gaia-assessment-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  example_usage.py  main.py  pyproject.toml  test_workflow_agent.py  visualize_workflow.py  workflow-plan.md
src/: agent.py  code_executor.py  config.py  gate_functions.py  llm_provider.py  tools.py  workflow_agent.py
src/tools/: __init__.py  answer_verifier.py  audio_analyzer.py  code_agent.py  file_fetcher.py  image_analyzer.py  spreadsheet_analyzer.py  web_search.py  youtube_analyzer.py
src/tools/tests/: test_audio_analyzer.py  test_youtube_analyzer.py
tests/: test_code_executor.py
